# gui_core

./: CMakeLists.txt  icon_size.txt  main.cpp  test.cpp  test.h  test.ui
icons/dark/: index.theme
model/: composition_view_model.cpp  composition_view_model.h
styles/: dark_style.cpp  dark_style.css  dark_style.h
widgets/: checkable_icon.cpp  checkable_icon.h  linked_number_editor.cpp  linked_number_editor.h
widgets/editors/: label_editor.cpp  label_editor.h  line_editor.cpp  line_editor.h  number_editor.cpp  number_editor.h
